# project-template

./: READMEtemplate.md
rust-projects/: Cargo.toml  README.md
rust-projects/src/: lib.rs
